a few upgrades: added close button to overlay (clickable area bug tho), added about and positions buttons to navdrawer (not yet functional), edited IA edibleness out of SVGs for size, tried a table hack for vertical centering of detail-text, decided its probably not necessary or even wanted (position 1)

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 </head>
 
 <body class="loading container-fluid">
-	<div class="positions wrapper">
+	<div class="wrapper">
 		<div class="nav-bar row">
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
 			</div>
 		</div>
 		<nav class="row">
+			<div class="navigation">About</div>
+			<div class="navigation">Positions</div>
 			<div data-filter-type="cancer-type" class="filter cancer-type">
 				<h3>Filter by Cancer Type</h3>
 				<ul class="uppercase">
@@ -64,13 +66,13 @@
 		</div>
 		<section id="about">
 			<div class="one row">
-				<div class="col-md-6 col-md-offset-6">
+				<div class="col-sm-6 col-sm-offset-6">
 					<h2>This project exists to help save lives.</h2>
 					<h3>One tweak, thrust, heave, and pant at a time</h3>
 				</div>
 			</div>
 			<div class="two row">
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<h2>Before the What, <em>the Why.</em></h2>
 					<p>Because fear of cancer can be as bad as cancer itself.<br>
 						Because 90% of cancer can be cured if checked by stage one.<br>
@@ -79,7 +81,7 @@
 				</div>
 			</div>
 			<div class="three row">
-				<div class="col-md-6 col-md-offset-6">
+				<div class="col-sm-6 col-sm-offset-6">
 					<h2>KNOWLEDGE</h2>
 					<p>Because of all this, The Cancer Sutra is designed to challenge the taboos and conventions about cancer.<br>
 						Firstly by talking about how to look for cancer, not just find it.<br>
@@ -87,7 +89,7 @@
 				</div>
 			</div>
 			<div class="four row">
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<h2>After all, saving lives is <em>one thing.</em></h2>
 					<p>Having fun while doing it &mdash; well, that's something we can all get behind. (Or in front of, depending.)</p>
 				</div>
@@ -106,11 +108,17 @@
 							<img src="positions/svg/1.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2>Split-Screening</h2>
-							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
-							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
-							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
-							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
+							<table>
+								<tr>
+									<td>
+										<h2>Split-Screening</h2>
+										<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+										<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+										<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+										<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
+									</td>
+								</tr>
+							</table>
 						</div>
 					</div>
 				</div>
@@ -322,7 +330,7 @@
 		</footer>
 	</div>
 	<div class="overlay overlay-contentscale">
-		nothing
+		<a id="close">&#215;</a>
 	</div>
 	<script src="js/routie.min.js"></script>
 	<script src="js/jquery-2.1.1.min.js"></script>
