close button fix, and prelim gesture recog

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 	<script src="js/routie.min.js"></script>
 	<script src="js/jquery-2.1.1.min.js"></script>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
-	<script src="js/hammer.min.js"></script>
+	<script src="js/jquery.touchSwipe.min.js"></script>
 	<script src="js/isotope.pkgd.min.js"></script>
 	<script src="js/mousetrap.min.js"></script>
 	<script src="js/assets.js"></script>
