loading svg now external, added 'enough foreplay' button, single column sutra on mobile, disabled filters on about page. body now has classes "about", "positions", "loading" based on state.

--- a/index.html
+++ b/index.html
@@ -24,26 +24,29 @@
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
 			</div>
+			<a href="#/positions" class="enough">Enough Foreplay!  &#10140;</a>
 		</div>
 		<nav class="row">
-			<div class="navigation">About</div>
-			<div class="navigation">Positions</div>
-			<div data-filter-type="cancer-type" class="filter cancer-type">
-				<h3>Filter by Cancer Type</h3>
-				<ul class="uppercase">
-					<li><a href data-filter="breast" data-toggle="off">Breast</a></li>
-					<li><a href data-filter="testicular" data-toggle="off">Testicular</a></li>
-					<li><a href data-filter="skin" data-toggle="off">Skin</a></li>
-					<li><a href data-filter="prostate" data-toggle="off">Prostate</a></li>
-				</ul>
-			</div>
-			<div data-filter-type="partnership" class="filter partnership">
-				<h3>Filter by Partnership</h3>
-				<ul class="uppercase">
-					<li><a href data-filter="mm" data-toggle="off" class="test">Male/Male</a></li>
-					<li><a href data-filter="ff" data-toggle="off">Female/Female</a></li>
-					<li><a href data-filter="mf" data-toggle="off">Male/Female</a></li>
-				</ul>
+			<a href="#" class="navigation">About</a>
+			<a href="#/positions" class="navigation">Positions</a>
+			<div class="filters">
+				<div data-filter-type="cancer-type" class="filter cancer-type">
+					<h3>Filter by Cancer Type</h3>
+					<ul class="uppercase">
+						<li><a href data-filter="breast" data-toggle="off">Breast</a></li>
+						<li><a href data-filter="testicular" data-toggle="off">Testicular</a></li>
+						<li><a href data-filter="skin" data-toggle="off">Skin</a></li>
+						<li><a href data-filter="prostate" data-toggle="off">Prostate</a></li>
+					</ul>
+				</div>
+				<div data-filter-type="partnership" class="filter partnership">
+					<h3>Filter by Partnership</h3>
+					<ul class="uppercase">
+						<li><a href data-filter="mm" data-toggle="off" class="test">Male/Male</a></li>
+						<li><a href data-filter="ff" data-toggle="off">Female/Female</a></li>
+						<li><a href data-filter="mf" data-toggle="off">Male/Female</a></li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 		<header class="animated fadeIn row">
@@ -51,7 +54,7 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 		</header>
 		<div class="loader">
-			<svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			<!--<svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 		     width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
 			  <path fill="#000" d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z">
 			    <animateTransform attributeType="xml"
@@ -62,7 +65,8 @@
 			      dur="1s"
 			      repeatCount="indefinite"/>
 			   </path>
-		  </svg>
+		  </svg>-->
+		  <img src="img/loader.svg">
 		</div>
 		<section id="about">
 			<div class="one row">
