changed enough>foreplay and cancer-sutra>positions, added page transitions (needs work)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
 			</div>
-			<a href="#/positions" class="enough">Enough Foreplay!  &#10140;</a>
+			<a href="#/positions" class="foreplay">Enough Foreplay!  &#10140;</a>
 		</div>
 		<nav class="row">
 			<a href="#" class="navigation">About</a>
@@ -103,7 +103,7 @@
 				<a href="#/positions">ONWARD &amp; UNDERWARD</a>
 			</div>
 		</section>
-		<section id="cancer-sutra">
+		<section id="positions">
 			<div data-position="1" data-cancer-type="breast" data-partnership="ff">
 				<img src="positions/svg/1.svg">
 				<div data-position="1" class="detail detail-image-vertical">
@@ -341,6 +341,7 @@
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<script src="js/jquery.touchSwipe.min.js"></script>
 	<script src="js/isotope.pkgd.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script src="js/mousetrap.min.js"></script>
 	<script src="js/assets.js"></script>
 	<script src="fancybox/jquery.fancybox.pack.js"></script>
