QA about mobile about, auto scrolling, auto menu close on about page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>
 	<!--<link rel="stylesheet" href="fancybox/v3beta/jquery.fancybox.css"></script>-->
 	<link rel="stylesheet" href="fonts/keplerstd/keplerstd.css"></script>
+	<link rel="stylesheet" href="fonts/keplerstd/socialico.css"></script>
 	<link rel="stylesheet" href="css/app.css"></script>
 	<link rel="stylesheet" href="css/mq.css"></script>
 	<!--[if lt IE 9]>
