--- a/index.html
+++ b/index.html
@@ -432,9 +432,11 @@
 		<a id="close">&#215;</a>
 	</div>
 	<script src="js/routie.min.js"></script>
-	<script src="js/jquery-2.1.1.min.js"></script>
+	<!--<script src="js/jquery-2.1.1.min.js"></script>-->
+	<script src="jquery-1.11.2.min.js"></script>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
-	<script src="js/jquery.touchSwipe.min.js"></script>
+	<!--<script src="js/jquery.touchSwipe.min.js"></script>-->
+	<script src="js/hammer.min.js"></script>
 	<script src="js/isotope.pkgd.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/mousetrap.min.js"></script>
