responsive-less QA

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<div class="nav-bar row">
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
+				<h1>The Cancer Sutra</h1>
 			</div>
 			<div class="foreplay"><a href="#/positions">Enough Foreplay!  &#10140;</a></div>
 		</div>
