--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 	<script src="js/jquery-1.11.2.min.js"></script>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<!--<script src="js/jquery.touchSwipe.min.js"></script>-->
-	<script src="js/hammer.min.js"></script>
+	<!--<script src="js/hammer.min.js"></script>-->
 	<script src="js/isotope.pkgd.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/mousetrap.min.js"></script>
