more no-MQ QA, and validated HTML

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<title>The Cancer Sutra</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="css/animate.css"></script>
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></script>
-	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>
-	<!--<link rel="stylesheet" href="fancybox/v3beta/jquery.fancybox.css"></script>-->
-	<link rel="stylesheet" href="fonts/keplerstd/keplerstd.css"></script>
-	<link rel="stylesheet" href="fonts/keplerstd/socialico.css"></script>
-	<link rel="stylesheet" href="css/app.css"></script>
-	<link rel="stylesheet" href="css/mq.css"></script>
+	<link rel="stylesheet" href="css/animate.css"></style>
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
+	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></style>
+	<!--<link rel="stylesheet" href="fancybox/v3beta/jquery.fancybox.css"></style>-->
+	<link rel="stylesheet" href="fonts/keplerstd/keplerstd.css"></style>
+	<link rel="stylesheet" href="fonts/keplerstd/socialico.css"></style>
+	<link rel="stylesheet" href="css/app.css"></style>
+	<link rel="stylesheet" href="css/mq.css"></style>
 	<!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.js"></script>
@@ -69,7 +69,7 @@
 			      repeatCount="indefinite"/>
 			   </path>
 		  </svg>-->
-		  <img src="img/loader.svg">
+		  <img alt="" src="img/loader.svg">
 		</div>
 		<section id="about">
 			<div class="one row">
@@ -188,12 +188,12 @@
 			</div>
 			<div id="positions">
 				<div data-position="1" data-cancer-type="breast" data-partnership="ff">
-					<img src="positions/svg/1.svg">
+					<img alt="" src="positions/svg/1.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="1" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/1.svg">
+								<img alt="" src="positions/svg/1.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<table>
@@ -212,12 +212,12 @@
 					</div>
 				</div>
 				<div data-position="2" data-cancer-type="skin" data-partnership="mf">
-					<img src="positions/svg/2.alt.svg">
+					<img alt="" src="positions/svg/2.alt.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="2" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/2.alt.svg">
+								<img alt="" src="positions/svg/2.alt.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -230,12 +230,12 @@
 					</div>
 				</div>
 				<div data-position="3" data-cancer-type="testicular" data-partnership="mf">
-					<img src="positions/svg/3.svg">
+					<img alt="" src="positions/svg/3.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="3" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/3.svg">
+								<img alt="" src="positions/svg/3.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -248,12 +248,12 @@
 					</div>
 				</div>
 				<div data-position="4" data-cancer-type="skin" data-partnership="ff">
-					<img src="positions/svg/4.svg">
+					<img alt="" src="positions/svg/4.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="4" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/4.svg">
+								<img alt="" src="positions/svg/4.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -266,12 +266,12 @@
 					</div>
 				</div>
 				<div data-position="5" data-cancer-type="prostate" data-partnership="mm">
-					<img src="positions/svg/5.svg">
+					<img alt="" src="positions/svg/5.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="5" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/5.svg">
+								<img alt="" src="positions/svg/5.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -284,12 +284,12 @@
 					</div>
 				</div>
 				<div data-position="6" data-cancer-type="breast" data-partnership="ff">
-					<img src="positions/svg/6.svg">
+					<img alt="" src="positions/svg/6.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="6" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/6.svg">
+								<img alt="" src="positions/svg/6.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -302,12 +302,12 @@
 					</div>
 				</div>
 				<!--<div data-position="7" data-cancer-type="" data-partnership="mm">
-					<img src="positions/svg/7.svg">
+					<img alt="" src="positions/svg/7.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="7" class="detail">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/7.svg">
+								<img alt="" src="positions/svg/7.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -321,11 +321,11 @@
 				</div>-->
 				<div data-position="8" data-cancer-type="breast" data-partnership="ff">
 					<div class="hover-title">Hover Title</div>
-					<img src="positions/svg/8.svg">
+					<img alt="" src="positions/svg/8.svg">
 					<div data-position="8" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/8.svg">
+								<img alt="" src="positions/svg/8.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -338,12 +338,12 @@
 					</div>
 				</div>
 				<div data-position="9" data-cancer-type="testicular" data-partnership="mf">
-					<img src="positions/svg/9.svg">
+					<img alt="" src="positions/svg/9.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="9" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/9.svg">
+								<img alt="" src="positions/svg/9.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -356,12 +356,12 @@
 					</div>
 				</div>
 				<div data-position="10" data-cancer-type="skin" data-partnership="ff">
-					<img src="positions/svg/10.svg">
+					<img alt="" src="positions/svg/10.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="10" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/10.svg">
+								<img alt="" src="positions/svg/10.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -374,12 +374,12 @@
 					</div>
 				</div>
 				<div data-position="11" data-cancer-type="testicular" data-partnership="mf">
-					<img src="positions/svg/11.svg">
+					<img alt="" src="positions/svg/11.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="11" class="detail detail-image-vertical">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/12.svg">
+								<img alt="" src="positions/svg/12.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -392,12 +392,12 @@
 					</div>
 				</div>
 				<div data-position="12" data-cancer-type="prostate" data-partnership="mm">
-					<img src="positions/svg/12.svg">
+					<img alt="" src="positions/svg/12.svg">
 					<div class="hover-title">Hover Title</div>
 					<div data-position="12" class="detail detail-image-horizontal">
 						<div class="row-fluid">
 							<div class="col-sm-6 col-md-6 detail-image">
-								<img src="positions/svg/2.svg">
+								<img alt="" src="positions/svg/2.svg">
 							</div>
 							<div class="col-sm-6 col-md-6 detail-text">
 								<h2>Split-Screening</h2>
@@ -414,7 +414,7 @@
 		<footer class="row uppercase">
 			<div class="col-md-1"></div>
 			<div class="col-md-1 col-sm-2 nopadding">
-				<img src="img/100x100.gif">
+				<img alt="" src="img/100x100.gif">
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<span>&copy; 2014 | The Bull White House</span>
@@ -422,7 +422,7 @@
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-1 col-sm-2 nopadding">
-				<img src="img/100x100.gif">
+				<img alt="" src="img/100x100.gif">
 			</div>
 			<div class="col-md-4 col-sm-4 acc">
 				<span>In Partnership with<br>The American Cancer Society</span>
