--- a/index.html
+++ b/index.html
@@ -436,13 +436,14 @@
 	<!--<script src="js/jquery-2.1.1.min.js"></script>-->
 	<script src="js/jquery-1.11.2.min.js"></script>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
+	<script src="js/sie.js"></script>
 	<!--<script src="js/jquery.touchSwipe.min.js"></script>-->
 	<!--<script src="js/hammer.min.js"></script>-->
 	<script src="js/isotope.pkgd.min.js"></script>
-	<script src="js/wow.min.js"></script>
+	<!--<script src="js/wow.min.js"></script>-->
 	<script src="js/mousetrap.min.js"></script>
 	<script src="js/assets.js"></script>
-	<script src="fancybox/jquery.fancybox.pack.js"></script>
+	<!--<script src="fancybox/jquery.fancybox.pack.js"></script>-->
 	<!--<script src="fancybox/v3beta/jquery.fancybox.js"></script>-->
 	<script src="js/app.js"></script>
 </body>
