improved mobile size positioning of about section, horz and tablet still need work

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			</div>
 			<div class="three row">
 				<div class="col-sm-6 col-sm-offset-6">
-					<h2>KNOWLEDGE</h2>
+					<h2>KNOWLEDGE.</h2>
 					<p>Because of all this, The Cancer Sutra is designed to challenge the taboos and conventions about cancer.<br>
 						Firstly by talking about how to look for cancer, not just find it.<br>
 						Secondly, by bringing the fight against cancer, and the prevention of it, out of a place of isolation.</p>
@@ -443,7 +443,7 @@
 	<!--[if lte IE 9]>
 		<script src="js/jquery-1.11.2.min.js"></script>
 	<![endif]-->
-	
+
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<!--<script src="js/jquery.touchSwipe.min.js"></script>-->
 	<!--<script src="js/hammer.min.js"></script>-->
