switched skin cancer into skin chapter, all other chapters are null

--- a/index.html
+++ b/index.html
@@ -116,6 +116,22 @@
 			<div id="chapters">
 				<div data-cancer-type="breast">
 					<div class="part1">
+					</div>
+					<div class="part2">
+					</div>
+					<div class="expand">
+						<span class="glyphicon glyphicon-circle-arrow-down closed"></span><span class="glyphicon glyphicon-circle-arrow-up open"></span>
+					</div>
+				</div>
+				<div data-cancer-type="testicular">
+					<div class="part1"></div>
+					<div class="part2"></div>
+					<div class="expand">
+						<span class="glyphicon glyphicon-circle-arrow-down closed"></span><span class="glyphicon glyphicon-circle-arrow-up open"></span>
+					</div>
+				</div>
+				<div data-cancer-type="skin">
+					<div class="part1">
 						<h2>Skin Cancer</h2>
 						<p>The skin is the largest of the body's organs (yes, men, even yours), which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
 						<p>Never you fret.</p>
@@ -160,20 +176,6 @@
 							</div>
 						</div>
 					</div>
-					<div class="expand">
-						<span class="glyphicon glyphicon-circle-arrow-down closed"></span><span class="glyphicon glyphicon-circle-arrow-up open"></span>
-					</div>
-				</div>
-				<div data-cancer-type="testicular">
-					<div class="part1"></div>
-					<div class="part2"></div>
-					<div class="expand">
-						<span class="glyphicon glyphicon-circle-arrow-down closed"></span><span class="glyphicon glyphicon-circle-arrow-up open"></span>
-					</div>
-				</div>
-				<div data-cancer-type="skin">
-					<div class="part1"></div>
-					<div class="part2"></div>
 					<div class="expand">
 						<span class="glyphicon glyphicon-circle-arrow-down closed"></span><span class="glyphicon glyphicon-circle-arrow-up open"></span>
 					</div>
