populated all chapter text areas

--- a/index.html
+++ b/index.html
@@ -116,16 +116,100 @@
 			<div id="chapters">
 				<div data-cancer-type="breast">
 					<div class="part1">
+						<h2>Breast Cancer</h2>
+						<p>The skin is the largest of the body's organs (yes, men, even yours), which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
+						<p>Never you fret.</p>
+						<p>You'll soon have your parner's every curve and swerve under both wraps and yourself.</p>
 					</div>
 					<div class="part2">
+						<h3>Just remember to...</h3>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
 					</div>
 					<div class="expand">
 						<span class="glyphicon glyphicon-circle-arrow-down closed"></span><span class="glyphicon glyphicon-circle-arrow-up open"></span>
 					</div>
 				</div>
 				<div data-cancer-type="testicular">
-					<div class="part1"></div>
-					<div class="part2"></div>
+					<div class="part1">
+						<h2>Testicular Cancer</h2>
+						<p>The skin is the largest of the body's organs (yes, men, even yours), which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
+						<p>Never you fret.</p>
+						<p>You'll soon have your parner's every curve and swerve under both wraps and yourself.</p>
+					</div>
+					<div class="part2">
+						<h3>Just remember to...</h3>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+					</div>
 					<div class="expand">
 						<span class="glyphicon glyphicon-circle-arrow-down closed"></span><span class="glyphicon glyphicon-circle-arrow-up open"></span>
 					</div>
@@ -181,8 +265,51 @@
 					</div>
 				</div>
 				<div data-cancer-type="prostate">
-					<div class="part1"></div>
-					<div class="part2"></div>
+					<div class="part1">
+						<h2>Prostate Cancer</h2>
+						<p>The skin is the largest of the body's organs (yes, men, even yours), which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
+						<p>Never you fret.</p>
+						<p>You'll soon have your parner's every curve and swerve under both wraps and yourself.</p>
+					</div>
+					<div class="part2">
+						<h3>Just remember to...</h3>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+						<div class="acrostic">
+							<div class="row">
+								<div class="col-xs-2 letter">F</div>
+								<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+							</div>
+						</div>
+					</div>
 					<div class="expand">
 						<span class="glyphicon glyphicon-circle-arrow-down closed"></span><span class="glyphicon glyphicon-circle-arrow-up open"></span>
 					</div>
